Added postcss config.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^0.1.5",
+    "autoprefixer": "^8.2.0",
     "next": "^5.0.0",
+    "postcss": "^6.0.21",
+    "postcss-each": "^0.10.0",
+    "postcss-for": "^2.1.1",
+    "postcss-functions": "^3.0.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-simple-vars": "^4.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
